nvidia_gpu_stats/vendor/darling/tests/compile-fail/duplicate_word_across_variants.rs
use darling::FromMeta;

#[derive(FromMeta)]
enum Choice {
    #[darling(word)]
    A,
    #[darling(word)]
    B,
    C,
}

fn main() {}
